# konsole

./: CMakeLists.txt
data/: CMakeLists.txt
data/color-schemes/: CMakeLists.txt  DarkPastels.colorscheme
data/keyboard-layouts/: CMakeLists.txt
desktop/: CMakeLists.txt  konsole.desktop  konsole.notifyrc  konsolehere.desktop  konsolehere_as_root.desktop  konsolepart.desktop  konsolerun.desktop  sessionui.rc  terminalemulator.desktop
doc/manual/: index.docbook
src/: Application.cpp  Application.h  AutoScrollHandler.cpp  AutoScrollHandler.h  BookmarkHandler.cpp  BookmarkHandler.h  BookmarkMenu.cpp  BookmarkMenu.h  CMakeLists.txt  Character.h  CharacterColor.h  CharacterFormat.cpp  CharacterFormat.h  CharacterWidth.cpp  CheckableSessionModel.cpp  CheckableSessionModel.h  ColorScheme.cpp  ColorScheme.h  ColorSchemeEditor.cpp  ColorSchemeEditor.h  ColorSchemeManager.cpp  ColorSchemeManager.h  ColorSchemeViewDelegate.cpp  ColorSchemeViewDelegate.h  CompactHistoryBlock.h  CompactHistoryBlockList.h  CompactHistoryScroll.cpp  CompactHistoryScroll.h  CompactHistoryType.h  CopyInputDialog.cpp  CopyInputDialog.h  EditProfileDialog.cpp  EditProfileDialog.h  EditProfileDialog.ui  Emulation.cpp  Emulation.h  ExtendedCharTable.cpp  ExtendedCharTable.h  Filter.cpp  Filter.h  (+112 more)
src/colorscheme/: ColorScheme.cpp  ColorScheme.h  ColorSchemeEditor.cpp  ColorSchemeManager.cpp  ColorSchemeWallpaper.cpp  ColorSchemeWallpaper.h
src/delegates/: ProfileShortcutDelegate.cpp  ProfileShortcutDelegate.h
src/filterHotSpots/: Filter.cpp  Filter.h  FilterChain.cpp  FilterChain.h  HotSpot.cpp  HotSpot.h  RegExpFilter.cpp  RegExpFilter.h  RegExpFilterHotspot.cpp  RegExpFilterHotspot.h  TerminalImageFilterChain.cpp  TerminalImageFilterChain.h  UrlFilter.cpp  UrlFilter.h  UrlFilterHotspot.cpp  UrlFilterHotspot.h
src/history/: HistoryFile.cpp  HistoryScroll.cpp  HistoryScroll.h  HistoryScrollFile.h  HistoryScrollNone.cpp  HistoryScrollNone.h  HistoryTypeFile.cpp  HistoryTypeNone.cpp
src/history/compact/: CompactHistoryBlock.cpp  CompactHistoryBlockList.cpp  CompactHistoryLine.cpp  CompactHistoryLine.h  CompactHistoryScroll.cpp  CompactHistoryScroll.h  CompactHistoryType.cpp  CompactHistoryType.h
src/keyboardtranslator/: FallbackKeyboardTranslator.cpp  FallbackKeyboardTranslator.h
src/profile/: EditProfileDialog.cpp  EditProfileDialog.h  Profile.cpp  Profile.h  ProfileCommandParser.cpp  ProfileCommandParser.h  ProfileGroup.cpp  ProfileGroup.h  ProfileList.cpp  ProfileManager.cpp  ProfileManager.h  ProfileWriter.cpp  ProfileWriter.h
src/session/: Session.cpp  Session.h  SessionController.cpp  SessionController.h  SessionDisplayConnection.cpp  SessionDisplayConnection.h  SessionGroup.cpp  SessionListModel.cpp  SessionListModel.h  SessionManager.cpp  SessionManager.h  SessionTask.cpp
src/settings/: GeneralSettings.h  GeneralSettings.ui  ProfileSettings.cpp  ProfileSettings.h  TabBarSettings.cpp  TabBarSettings.h  konsole.kcfg
src/tests/: CMakeLists.txt  CharacterColorTest.cpp  CharacterColorTest.h  CharacterWidthTest.cpp  DBusTest.cpp  DBusTest.h  HistoryTest.cpp  KeyboardTranslatorTest.cpp  KeyboardTranslatorTest.h  PartManualTest.cpp  PartTest.cpp  PartTest.h  ProfileTest.cpp  PtyTest.cpp  ScreenTest.cpp  SessionTest.cpp  ShellCommandTest.cpp  TerminalCharacterDecoderTest.cpp  TerminalInterfaceTest.cpp  TerminalInterfaceTest.h  TerminalTest.cpp  Vt102EmulationTest.cpp
src/widgets/: EditProfileDialog.cpp  EditProfileDialog.h  EditProfileDialog.ui  HistorySizeWidget.cpp  IncrementalSearchBar.cpp  IncrementalSearchBar.h  KonsolePrintManager.cpp  RenameTabWidget.cpp  RenameTabWidget.ui  TabTitleFormatButton.cpp  TabTitleFormatButton.h  TerminalDisplay.cpp  TerminalDisplay.h  TerminalDisplayAccessible.cpp  ViewContainer.cpp  ViewContainer.h  ViewContainerTabBar.cpp  ViewContainerTabBar.h  ViewSplitter.cpp
tests/: GLASS.utf8  README.xterm  boxes.txt  cat_test_urls  colortest.sh
tools/: CMakeLists.txt  fontembedder.cpp
