install( FILES
         BlackOnLightYellow.colorscheme
         BlackOnRandomLight.colorscheme
         BlackOnWhite.colorscheme
         BlueOnBlack.colorscheme
         Campbell.colorscheme
         DarkPastels.colorscheme
         GreenOnBlack.colorscheme
         Linux.colorscheme
         RedOnBlack.colorscheme
         Solarized.colorscheme
         SolarizedLight.colorscheme
         Tango.colorscheme
         WhiteOnBlack.colorscheme
         DESTINATION
         ${DATA_INSTALL_DIR}/konsole )
